@@ -1,3 +1,12 @@
+2026-02-12T02:01:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21930679938 # 875
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-12
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
+* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 263 297
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-23 2026-01-24 2026-01-25] / []
+
 2026-02-11T02:08:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21890019279 # 874
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
